# S3Plate

./: BUILD  CMakeLists.txt  GNUmakefile  S3PlateMT.kdev4  doIt.mac  doIt2.mac  plates.cc  visO.mac
.kdev4/: S3PlateMT.kdev4
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorConstructionGDML.hh  DetectorMessenger.hh  EventAction.hh  EventActionMessenger.hh  ExN06StackingAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh  SteppingVerbose.hh  UserActionInitialization.hh  macros.hh
input_files/: BC412_emission.txt  R7600u-300.txt  chart.txt  colon2.txt  fiberAbs.txt  fiberAbs.txt~  fiberWLS.txt  fiberWLSabs.txt  fiberWLSabs.txt~  mylar_ref_coeff.txt  pTP_emission.txt~  photonis_xp1806.txt  qe_ETL_D724KFL.txt  rindexScint.txt~  scintAbsLen.txt~  teflon_ref_coeff.txt  teflon_ref_coeff.txt~  temporary.txt  values.txt  values.txt~  values2.txt  values2.txt~  vikuiti_ref_coeff.txt  vikuiti_ref_coeff.txt~  wavelen.txt  wavelen.txt~  wavelen2.txt
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  EventActionMessenger.cc  ExN06StackingAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc  SteppingVerbose.cc  UserActionInitialization.cc
